--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,13 @@ on:
     branches:
       - release/*
 
+env:
+  DOCKER_IMAGE: guilherme310402/app_presente_front
+  DEPLOYMENT_NAME: app-presente-front
+  PROJECT_ID: app-chamada-5706
+  CLUSTER_NAME: devops-cluster
+  REGION: us-central1
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -55,9 +62,9 @@ jobs:
         run: npm run build
       - name: Build and push Docker image
         run: |
-          docker build --no-cache -t guilherme310402/app_presente_front:${GITHUB_SHA::7} .
+          docker build --no-cache -t ${{ env.DOCKER_IMAGE }}:${{ github.sha }} .
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:${GITHUB_SHA::7}
+          docker push ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -72,7 +79,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.24.0
         with:
           slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
-          channel-id: 'YOUR_SLACK_CHANNEL_ID' # Replace with actual Slack channel ID
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
           text: "New release version built: ${{ github.sha }} for app_presente_front"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
@@ -97,9 +104,9 @@ jobs:
         run: npm run build
       - name: Build and push Docker image
         run: |
-          docker build --no-cache -t guilherme310402/app_presente_front:latest .
+          docker build --no-cache -t ${{ env.DOCKER_IMAGE }}:stage-${{ github.sha }} .
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:latest
+          docker push ${{ env.DOCKER_IMAGE }}:stage-${{ github.sha }}
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -111,19 +118,17 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
       - name: Install gke-gcloud-auth-plugin
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
+          gcloud components install gke-gcloud-auth-plugin --quiet
           gcloud components update --quiet
-          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
+          gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --region ${{ env.REGION }} --project ${{ env.PROJECT_ID }}
       - name: Deploy to stage
         run: |
           kubectl -n stage-app-presente apply -f k8s/stage/frontend-deployment.yaml -f k8s/stage/frontend-service.yaml
-          kubectl set image deployment/app-presente-front -n stage-app-presente app-presente-front=guilherme310402/app_presente_front:latest
-          kubectl patch deployment app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
-          kubectl rollout restart deployment/app-presente-front -n stage-app-presente
-          kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=120s
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} -n stage-app-presente ${{ env.DEPLOYMENT_NAME }}=${{ env.DOCKER_IMAGE }}:stage-${{ github.sha }}
+          kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }} -n stage-app-presente --timeout=300s
+          kubectl patch deployment ${{ env.DEPLOYMENT_NAME }} -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
 
   deploy-production:
     runs-on: ubuntu-latest
@@ -145,9 +150,9 @@ jobs:
         run: npm run build
       - name: Build and push Docker image
         run: |
-          docker build --no-cache -t guilherme310402/app_presente_front:latest .
+          docker build --no-cache -t ${{ env.DOCKER_IMAGE }}:prod-${{ github.sha }} .
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:latest
+          docker push ${{ env.DOCKER_IMAGE }}:prod-${{ github.sha }}
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -159,16 +164,20 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
       - name: Install gke-gcloud-auth-plugin
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
+          gcloud components install gke-gcloud-auth-plugin --quiet
           gcloud components update --quiet
-          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
+          gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --region ${{ env.REGION }} --project ${{ env.PROJECT_ID }}
       - name: Deploy to production
         run: |
           kubectl -n production-app-presente apply -f k8s/production/frontend-deployment.yaml -f k8s/production/frontend-service.yaml
-          kubectl set image deployment/app-presente-front -n production-app-presente app-presente-front=guilherme310402/app_presente_front:latest
-          kubectl patch deployment app-presente-front -n production-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
-          kubectl rollout restart deployment/app-presente-front -n production-app-presente
-          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=120s
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} -n production-app-presente ${{ env.DEPLOYMENT_NAME }}=${{ env.DOCKER_IMAGE }}:prod-${{ github.sha }}
+          kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }} -n production-app-presente --timeout=300s
+      - name: Verify deployment health
+        run: |
+          kubectl get pods -n production-app-presente -l app=${{ env.DEPLOYMENT_NAME }}
+      - name: Rollback on failure
+        if: failure()
+        run: |
+          kubectl rollout undo deployment/${{ env.DEPLOYMENT_NAME }} -n production-app-presente
