--- a/k8s/production/frontend-deployment.yaml
+++ b/k8s/production/frontend-deployment.yaml
@@ -6,10 +6,15 @@ metadata:
   labels:
     app: app-presente-front
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: app-presente-front
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
@@ -18,7 +23,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: app-presente-front
-        image: guilherme310402/app_presente_front:latest
+        image: guilherme310402/app_presente_front:prod-${{ github.sha }}
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
@@ -29,21 +34,25 @@ spec:
               name: app-presente-secrets
               key: NEXT_PUBLIC_API_URL
         - name: NEXT_PUBLIC_ENVIRONMENT_TEXT
-          value: "TESTE STAGE"
+          value: "PRODUCTION"
         readinessProbe:
           httpGet:
-            path: /
+            path: /api/health
             port: 3000
-          initialDelaySeconds: 30
+          initialDelaySeconds: 5
           periodSeconds: 10
-          failureThreshold: 6
+          timeoutSeconds: 3
+          successThreshold: 1
+          failureThreshold: 3
         livenessProbe:
           httpGet:
-            path: /
+            path: /api/health
             port: 3000
-          initialDelaySeconds: 60
+          initialDelaySeconds: 15
           periodSeconds: 20
-          failureThreshold: 6
+          timeoutSeconds: 3
+          successThreshold: 1
+          failureThreshold: 3
         lifecycle:
           preStop:
             exec:
