--- a/k8s/production/frontend-deployment.yaml
+++ b/k8s/production/frontend-deployment.yaml
@@ -6,24 +6,26 @@ metadata:
   labels:
     app: app-presente-front
 spec:
-  replicas: 2
+  replicas: 2 
   selector:
     matchLabels:
       app: app-presente-front
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
+      maxSurge: 1 
+      maxUnavailable: 0 
   template:
     metadata:
       labels:
         app: app-presente-front
     spec:
       terminationGracePeriodSeconds: 30
+      nodeSelector:
+        kubernetes.io/arch: amd64 
       containers:
       - name: app-presente-front
-        image: guilherme310402/app_presente_front:latest
+        image: guilherme310402/app_presente_front:prod-placeholder
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
@@ -35,11 +37,20 @@ spec:
               key: NEXT_PUBLIC_API_URL
         - name: NEXT_PUBLIC_ENVIRONMENT_TEXT
           value: "PRODUCTION"
+        resources:
+          limits:
+            cpu: "50m"
+            memory: "64Mi"
+            ephemeral-storage: "250Mi"
+          requests:
+            cpu: "25m"
+            memory: "32Mi"
+            ephemeral-storage: "100Mi"
         readinessProbe:
           httpGet:
             path: /api/health
             port: 3000
-          initialDelaySeconds: 5
+          initialDelaySeconds: 10
           periodSeconds: 10
           timeoutSeconds: 3
           successThreshold: 1
@@ -57,12 +68,3 @@ spec:
           preStop:
             exec:
               command: ["/bin/sh", "-c", "sleep 5"]
-        resources:
-          limits:
-            cpu: "100m"
-            memory: "128Mi"
-            ephemeral-storage: "500Mi"
-          requests:
-            cpu: "50m"
-            memory: "64Mi"
-            ephemeral-storage: "250Mi"
